===v4.5.1===
 * You can now shift-click links into the Announcement EditBox.
 * You can now shift-click links into the Choose Name/ID EditBox to insert a spellID/itemID.
 * New text output locations:
 ** Smart Channel
 ** Chat Frame
 * Bug Fixes:
 ** (r178) The "Ignore Runes" setting should no longer appear for item cooldown icons
 ** (r179) Meta icons should now inherit icon properties from other icons a little better.
 ** (r181) Attempted a possible fix to the error 132s that some people are getting when they close the icon editor after viewing the group settings tab.
 ** (r182) ICD icons should now properly use the failed duration alpha setting when the duration requirements fail.

===v4.5.0===
 * Fully integrated main addon settings/group settings into the icon editor.
 * You can now set custom text to be displayed where a keybinding would normally be displayed in order to remind you of your keybindings directly on TMW icons.
 * Moving/resizing a group that is anchored to a frame other than UIParent will adjust the offsets instead of resetting the anchor to UIParent.
 * Reactive icons and conditions should now more accurately reflect the state of the abilities that they are checking.
 * Greatly increased the versatility and customizability of condition icons.
 * Improved rune cooldown detection.
 * Version warnings should be slightly less annoying.
 * Added monochrome as a font outline option.
 * Buff/debuff icons can now display the first number found in the tooltip of the aura that has been found on the icon.
 * New icon events:
 ** On Alpha Increase
 ** On Alpha Decrease
 * New Conditions:
 ** Buff/Debuff - Tooltip Scan
 ** Points in talent
 * Bug Fixes
 ** (r164) Tooltip scan conditions should now properly function with spellID input
 ** (r170) TellMeWhen_Options-r169.lua:215: attempt to index field "?" (a nil value)
 ** (r170) TellMeWhen_Options-r169.lua:1674: attempt to index field "?" (a nil value)
 
===v4.4.6===
 * Bug Fixes: